Fixed the user schedule alignment issues

--- a/app/styles/main_style.css
+++ b/app/styles/main_style.css
@@ -15,7 +15,3 @@ body {
 .fullwidth {
   width: 100%;
 }
-
-.fullwidth {
-  width: 100%;
-}
